Commit with updated tests